<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center_vertical"
        tools:context=".TweetActivity">

        <EditText
            android:id="@+id/tweetEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_tweet"
            android:inputType="textMultiLine"
            android:minLines="10"
            android:maxLines="20"
            android:gravity="top"
            android:layout_margin="20dp" />

        <Button
            android:id="@+id/postButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tweetEditText"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/primaryGreen"
            android:text="@string/post"
            android:layout_margin="20dp" />

        <Button
            android:id="@+id/homeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/postButton"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/primaryGreen"
            android:text="@string/home"
            android:layout_margin="20dp" />

    </RelativeLayout>

</ScrollView>
